sidebar arrow fixed (#1)
* sidebar arrow fixed

* fixed collapse misspelling

* removed an extra margin-top from menu-item-link.scss

* fixed padding and margin

* moved collapsedMenuButton in sidebar-navigation.scss to inside the media query

* used prettier on navigation.cy.ts, menu-item-button.tsx, sidebar-navigation.module.scss

---------

--- a/features/layout/sidebar-navigation/menu-item-link.module.scss
+++ b/features/layout/sidebar-navigation/menu-item-link.module.scss
@@ -3,10 +3,11 @@
 
 .listItem {
   height: space.$s12;
+  height: 40px;
   display: flex;
   align-items: center;
-  margin-top: space.$s1;
-  padding: space.$s0 space.$s3;
+  margin: 0.418rem 0;
+  padding: space.$s1 space.$s3;
   background: transparent;
   border-radius: 6px;
 }
